Parser/logs/rpmhdrcache.txt
<86>May 16 00:06:14 userdel[1884932]: delete user 'rooter'
<86>May 16 00:06:14 userdel[1884932]: removed group 'rooter' owned by 'rooter'
<86>May 16 00:06:14 userdel[1884932]: removed shadow group 'rooter' owned by 'rooter'
<86>May 16 00:06:14 groupadd[1884978]: group added to /etc/group: name=rooter, GID=1811
<86>May 16 00:06:14 groupadd[1884978]: group added to /etc/gshadow: name=rooter
<86>May 16 00:06:14 groupadd[1884978]: new group: name=rooter, GID=1811
<86>May 16 00:06:14 useradd[1885015]: new user: name=rooter, UID=1811, GID=1811, home=/root, shell=/bin/bash, from=none
<86>May 16 00:06:14 userdel[1885053]: delete user 'builder'
<86>May 16 00:06:14 userdel[1885053]: removed group 'builder' owned by 'builder'
<86>May 16 00:06:14 userdel[1885053]: removed shadow group 'builder' owned by 'builder'
<86>May 16 00:06:14 groupadd[1885091]: group added to /etc/group: name=builder, GID=1812
<86>May 16 00:06:14 groupadd[1885091]: group added to /etc/gshadow: name=builder
<86>May 16 00:06:14 groupadd[1885091]: new group: name=builder, GID=1812
<86>May 16 00:06:14 useradd[1885119]: new user: name=builder, UID=1812, GID=1812, home=/usr/src, shell=/bin/bash, from=none
<13>May 16 00:06:19 rpmi: libsnappy-1.1.7-alt1 sisyphus+276400.100.1.2 1625016393 installed
<13>May 16 00:06:19 rpmi: libpopt-devel-1:1.18-alt1 sisyphus+283609.300.5.1 1630003299 installed
<13>May 16 00:06:19 rpmi: openssl-config-3.2.0-alt1 sisyphus+366659.140.4.1 1736956949 installed
<13>May 16 00:06:19 rpmi: libp11-kit-1:0.25.5-alt1 sisyphus+352553.100.1.1 1720622573 installed
<13>May 16 00:06:19 rpmi: libtasn1-4.20.0-alt2 sisyphus+375829.100.1.1 1740299335 installed
<13>May 16 00:06:19 rpmi: rpm-macros-alternatives-0.5.3-alt1 sisyphus+371878.100.1.1 1737988822 installed
<13>May 16 00:06:19 rpmi: alternatives-0.5.3-alt1 sisyphus+371878.100.1.1 1737988822 installed
<13>May 16 00:06:19 rpmi: ca-certificates-2025.05.12-alt1 sisyphus+383903.200.2.1 1747060316 installed
<13>May 16 00:06:19 rpmi: ca-trust-0.2.0-alt1 sisyphus+344843.100.1.1 1712743326 installed
<13>May 16 00:06:19 rpmi: p11-kit-trust-1:0.25.5-alt1 sisyphus+352553.100.1.1 1720622573 installed
<13>May 16 00:06:20 rpmi: libcrypto3-3.3.3-alt1 sisyphus+374381.40.2.1 1739299401 installed
<13>May 16 00:06:20 rpmi: libssl3-3.3.3-alt1 sisyphus+374381.40.2.1 1739299401 installed
<13>May 16 00:06:20 rpmi: libssl-devel-3.3.3-alt1 sisyphus+374381.40.2.1 1739299401 installed
<13>May 16 00:06:20 rpmi: librpm-devel-4.13.0.1-alt40 sisyphus+327286.4100.14.1 1711485411 installed
<13>May 16 00:06:20 rpmi: libsnappy-devel-1.1.7-alt1 sisyphus+276400.100.1.2 1625016393 installed
<13>May 16 00:06:20 rpmi: libdb4.7-devel-4.7.25-alt13 sisyphus+341099.200.4.1 1709732031 installed
Building target platforms: x86_64
Building for target x86_64
Wrote: /usr/src/in/nosrpm/rpmhdrcache-0.3.2-alt1.nosrc.rpm (w1.gzdio)
Installing rpmhdrcache-0.3.2-alt1.src.rpm
Building target platforms: x86_64
Building for target x86_64
Executing(%prep): /bin/sh -e /usr/src/tmp/rpm-tmp.62052
+ umask 022
+ /bin/mkdir -p /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ rm -rf rpmhdrcache-0.3.2
+ echo 'Source #0 (rpmhdrcache-0.3.2.tar):'
Source #0 (rpmhdrcache-0.3.2.tar):
+ /bin/tar -xf /usr/src/RPM/SOURCES/rpmhdrcache-0.3.2.tar
+ cd rpmhdrcache-0.3.2
+ /bin/chmod -c -Rf u+rwX,go-w .
+ exit 0
Executing(%build): /bin/sh -e /usr/src/tmp/rpm-tmp.62052
+ umask 022
+ /bin/mkdir -p /usr/src/RPM/BUILD
+ cd /usr/src/RPM/BUILD
+ cd rpmhdrcache-0.3.2
+ gcc -shared -fPIC -D_GNU_SOURCE -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -o libqacache.so.0 -Wl,-soname,libqacache.so.0 cache.c -ldb -lcrypto -lsnappy -Wl,-z,defs
cache.c: In function 'cache_get':
cache.c:388:45: error: passing argument 1 of 'snappy_uncompressed_length' from incompatible pointer type [-Wincompatible-pointer-types]
  388 |         if (snappy_uncompressed_length(vent + 1, csize, &usize)) {
      |                                        ~~~~~^~~
      |                                             |
      |                                             struct cache_ent *
In file included from cache.c:262:
/usr/include/snappy-c.h:120:54: note: expected 'const char *' but argument is of type 'struct cache_ent *'
  120 | snappy_status snappy_uncompressed_length(const char* compressed,
      |                                          ~~~~~~~~~~~~^~~~~~~~~~
cache.c:397:40: error: passing argument 1 of 'snappy_uncompress' from incompatible pointer type [-Wincompatible-pointer-types]
  397 |             if (snappy_uncompress(vent + 1, csize, *valp, &usize)) {
      |                                   ~~~~~^~~
      |                                        |
      |                                        struct cache_ent *
/usr/include/snappy-c.h:103:45: note: expected 'const char *' but argument is of type 'struct cache_ent *'
  103 | snappy_status snappy_uncompress(const char* compressed,
      |                                 ~~~~~~~~~~~~^~~~~~~~~~
cache.c:406:56: error: passing argument 1 of 'snappy_validate_compressed_buffer' from incompatible pointer type [-Wincompatible-pointer-types]
  406 |             if (snappy_validate_compressed_buffer(vent + 1, csize)) {
      |                                                   ~~~~~^~~
      |                                                        |
      |                                                        struct cache_ent *
/usr/include/snappy-c.h:131:61: note: expected 'const char *' but argument is of type 'struct cache_ent *'
  131 | snappy_status snappy_validate_compressed_buffer(const char* compressed,
      |                                                 ~~~~~~~~~~~~^~~~~~~~~~
cache.c: In function 'cache_put':
cache.c:458:44: error: passing argument 3 of 'snappy_compress' from incompatible pointer type [-Wincompatible-pointer-types]
  458 |     if (snappy_compress(val, valsize, vent + 1, &csize)) {
      |                                       ~~~~~^~~
      |                                            |
      |                                            struct cache_ent *
/usr/include/snappy-c.h:73:37: note: expected 'char *' but argument is of type 'struct cache_ent *'
   73 |                               char* compressed,
      |                               ~~~~~~^~~~~~~~~~
error: Bad exit status from /usr/src/tmp/rpm-tmp.62052 (%build)


RPM build errors:
    Bad exit status from /usr/src/tmp/rpm-tmp.62052 (%build)
Command exited with non-zero status 1
0.07user 0.06system 0:00.17elapsed 82%CPU (0avgtext+0avgdata 22864maxresident)k
0inputs+0outputs (0major+8058minor)pagefaults 0swaps
hsh-rebuild: rebuild of `rpmhdrcache-0.3.2-alt1.src.rpm' failed.
Command exited with non-zero status 1
5.84user 3.12system 0:12.64elapsed 70%CPU (0avgtext+0avgdata 138564maxresident)k
488inputs+0outputs (0major+197963minor)pagefaults 0swaps
